Quorum3/Library/Tests/TypeChecker/Pass/TextAppend.quorum
class Main
    action Main
        //Text t 
        //t:SetValue("hello")
        text p = "hello"

        //t:Append("5")
        p:Append("5")

        //output t:GetValue()
        output p
    end
end